# vmm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  config.yaml  main.py  manage_vm_snapshots.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_execution.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-build.yml  release.yml
app/: __init__.py
app/api/: middleware.py  routes.py
app/core/: config.py  security.py
app/models/: task.py
app/services/: analysis_engine.py  file_handler.py  sysmon.py  task_manager.py  vm_controller.py  vm_pool_manager.py
app/services/edr/: README.md  __init__.py  base.py  kaspersky.py  manager.py  windows_avira.py  windows_defender.py  windows_kaspersky.py  windows_mcafee.py  windows_trend.py
app/services/linux/: __init__.py  kvm_controller.py
app/services/linux/multi_arch/: __init__.py  arch_manager.py  qemu_controller.py
app/services/linux/multi_arch/arch_configs/: __init__.py  x86_64_config.py
app/services/windows/: __init__.py
app/services/windows/edr/: README.md  __init__.py  base.py  manager.py  windows_kaspersky.py  windows_trend.py
app/services/windows/sysmon/: __init__.py  engine.py  manager.py
app/services/windows/sysmon/scripts/: sysmon_cli.py
app/utils/: helpers.py  performance_monitor.py
demo/: sample_result.txt
docs/: FILE_LIST_PARSING_FIX.md  FLAT_ZIP_STRUCTURE_FIX.md  LINUX_DEVELOPMENT_PLAN.md  MPCMDRUN_COMMAND_FIX.md  MULTILEVEL_DIRECTORY_EXTRACTION_FIX.md  MULTI_ARCH_DESIGN.md  POWERSHELL_COMMAND_FIX.md  PROJECT_OVERVIEW.md  REMOVE_ZIP_COMPRESSION_FIX.md  VM_RESOURCE_MANAGEMENT_IMPROVEMENT.md  ZIP_COMPRESSION_FLOW.md  ZIP_EXECUTION_PREVENTION_FIX.md  ZIP_EXTRACTION_DIAGNOSIS.md  ZIP_EXTRACTION_FINAL_FIX.md
scripts/: release.py
tools/: README.md  install_vbox.sh  test_multi_arch.py  vm_export_import.py
tools/sysmon/: README.md  sysmon_manager.py
tools/sysmon/configs/: sysmon-config-light.xml  sysmon-config.xml
tools/sysmon/scripts/: sysmon_cli.py
